--- a/survey/css/index.css
+++ b/survey/css/index.css
@@ -3,6 +3,7 @@ html,body{height:100%}
 /*底部*/
 .fixFoot{position:fixed;left:0;bottom:0;right:0;line-height:50px;text-align:center;font-size:14px;color:#bac0d0;}
 .fixFoot a{color:#BAC0D0;margin:0 5px;}
+.fixFoot a:hover{color:#FFFFFF;}
 .fixFoot span{margin:0 5px;}
 .box{height:100%;background:#1c5fa1 url(../images/bg.jpg) no-repeat center center;overflow:hidden;}
 .box .left{float:left;width:50%;height:100%;text-align:center;}
@@ -14,19 +15,22 @@ html,body{height:100%}
 .login >p{font-size:18px;color:#ffffff;margin-top:10px;text-align:center;}
 .loginForm{margin-top:90px;}
 .loginForm label{display:block;margin-bottom:20px;white-space: nowrap;}
-.loginForm label input{height:40px;box-sizing:border-box;padding-left:38px;background-color:#FFFFFF;border:0;vertical-align:middle;width:100%;font-size:14px;}
+.loginForm label input{height:40px;box-sizing:border-box;padding-left:38px;background-color:#FFFFFF;border:0;vertical-align:middle;width:100%;font-size:14px;border-radius:5px;}
 .loginForm label img{position:absolute;width:15px;height:17px;margin-top:12px;margin-left: 11px;}
 .loginForm label em{position:absolute;font-size:14px;color:#e64542;margin-left:10px;line-height:40px;display:none;}
 .code em{position:absolute;font-size:14px;color:#e64542;margin-left:10px;line-height:40px;display:none;}
 .code{margin-bottom:20px;white-space:nowrap}
-.code input{height:40px;box-sizing:border-box;padding-left:12px;background-color:#FFFFFF;border:0;vertical-align:middle;width:130px;font-size:14px;}
+.code input{height:40px;box-sizing:border-box;padding-left:12px;background-color:#FFFFFF;border:0;vertical-align:middle;width:130px;font-size:14px;border-radius:5px;}
 .code img{vertical-align:middle;width:60px;height:20px;margin: 0 8px;}
-.code a{color:#FFFFFF;vertical-align:middle;}
+.code a{color:rgba(255,255,255,0.8);vertical-align:middle;}
+.code a:hover{color:#FFFFFF;}
 label input[type=checkbox]{display:inline-block;width:auto;height:auto;padding-left:0;}
-label span{color:#FFFFFF;font-size:12px;}
+label span{color:rgba(255,255,255,0.8);font-size:12px;}
+label span:hover{color:#FFFFFF;cursor:pointer;}
 .loginForm input[type=submit]{display:block;width:100%;border:0;border-radius:5px;height:40px;font-size:18px;color:#FFFFFF;background-color:#3e7cef;letter-spacing:5px;font-weight:bold;}
 .aBtnGro{overflow:hidden;margin-top:30px;font-size:14px;}
-.aBtnGro a{float:right;color:#FFFFFF;}
+.aBtnGro a{float:right;color:rgba(255,255,255,0.8);}
+.aBtnGro a:hover{color:#FFFFFF}
 .aBtnGro a:first-child{float:left;}
 /*右边*/
 .carousel{width:560px;}
